# opengpu-lab

./: GNUmakefile  README.md
.github/workflows/: gpuopt.yml
backends/cuda/kernels/: matmul.cu  test_naive.cu
compiler/include/compiler/: ir.h  passes.h
compiler/src/: passes.cpp
opengpu-lab/: CMakeLists.txt
opengpu-lab/compiler/: CMakeLists.txt
opengpu-lab/compiler/include/compiler/: ir.h  passes.h
opengpu-lab/compiler/src/: ir.cpp  passes.cpp
opengpu-lab/profiler/include/profiler/: profiler.h
opengpu-lab/profiler/src/: profiler.cpp
opengpu-lab/tests/: CMakeLists.txt  test_compiler.cpp  test_profiler.cpp  test_rtl_validation.cpp
opengpu-lab/tools/: CMakeLists.txt  gpuopt.cpp
opengpu-lab/verilator/harness/: verilator_harness.cpp  verilator_harness.h
tests/: CMakeLists.txt  test_compiler.cpp
tools/: CMakeLists.txt  gpuopt.cpp
